[package]
name = "radiance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.7"
hickory-resolver = "0.24.0"
httpdate = "1"
log = { version = "0.4", features = [] }
once_cell = { version = "1", features = [] }
pretty_env_logger = "0.5"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
