[package]
name = "radiance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eetf = "0.9"
enum-map = "2.7"
flate2 = "1"
futures-util = "0.3"
hickory-resolver = "0.24.0"
httpdate = "1"
log = { version = "0.4", features = [] }
once_cell = { version = "1", features = [] }
pretty_env_logger = "0.5"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_etf = { path = "serde_etf" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
twilight-model = "0.15"
warp = { version = "0.3", features = ["tls"] }

[[bin]]
name = "rest"
path = "rest/main.rs"

[[bin]]
name = "gateway"
path = "gateway/main.rs"
